# xds-control-plane-the-hard-way

./: .gitignore  README.ja.md  README.md
.claude/skills/refresh-hardway/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml
chapter-01/: Dockerfile  Makefile  README.ja.md  README.md  docker-compose.yml
chapter-01/controlplane/: Cargo.toml  Dockerfile
chapter-01/controlplane/src/: main.rs  snapshot.rs
chapter-01/upstream/: Dockerfile
chapter-02/: Makefile  README.ja.md  README.md
chapter-02/controlplane/src/: main.rs  snapshot.rs
chapter-03/: Cargo.toml  Dockerfile  Makefile  README.ja.md  README.md  docker-compose.yml
chapter-03/controlplane/: Cargo.toml
chapter-03/controlplane/src/: main.rs  snapshot.rs  tls.rs  xtls.rs
chapter-04/: Cargo.toml  Makefile  README.ja.md  README.md
chapter-04/controlplane/src/: main.rs  snapshot.rs
chapter-04/envoy/: bootstrap.yaml
chapter-04/upstream/src/: main.rs
chapter-05/: Makefile  README.ja.md  README.md
chapter-05/controlplane/: Cargo.toml
chapter-05/controlplane/src/: main.rs  snapshot.rs
chapter-05/envoy/: bootstrap.yaml
chapter-05/upstream/: Cargo.toml
chapter-06/: Cargo.toml  Dockerfile  Makefile  README.ja.md  README.md  docker-compose.yml
chapter-06/controlplane/: Cargo.toml  build.rs
chapter-06/controlplane/proto/xds/data/orca/v3/: orca_load_report.proto
chapter-06/controlplane/src/: main.rs  snapshot.rs
chapter-06/envoy/: bootstrap.yaml
chapter-06/upstream/: Cargo.toml  build.rs
chapter-06/upstream/proto/: orca.proto
chapter-06/upstream/src/: main.rs
