[workspace]
resolver = "2"
members = ["controlplane", "upstream"]

[workspace.package]
edition = "2021"
license = "MIT"
publish = false

[workspace.dependencies]
tokio = { version = "1.41", features = ["rt-multi-thread", "macros", "signal", "net", "sync", "time"] }
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"
xds-api = "0.2"
# The upstream now serves both HTTP data and the ORCA gRPC service on one h2c
# port, so it uses axum (for the data fallback) + tonic (for OpenRcaService).
axum = { version = "0.7", features = ["http2"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
tokio-stream = { version = "0.1", features = ["sync"] }
async-stream = "0.3"
tonic-build = "0.12"
